Fix HTML syntax error

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
       <div class="pure-u-1">
         <footer>
           <small><a href="https://github.com/rg3/youtube-dl">youtube-dl {{ youtubedl_version }}</a></small> • <small><a href="https://github.com/natanlao/yaas">yaas {{ yaas_version }}</a></small>
-        <footer>
+        </footer>
       </div>
     </div>
 
