Fix HTML validation issues

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html>
+<html lang="en-US">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>yaas: youtube-dl as a service</title>
   <link rel="stylesheet" href="https://natan.la/css/default.css">
-  <style type="text/css">
+  <style>
     /* purecss.io */
     fieldset {
       margin: 0;
