Improve error handling

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,7 +1,9 @@
 {% extends '_base.html' %}
+
+
 {% block main %}
 <h2>Error</h2>
 <p>{{ error }}</p>
-github error link TODO
+<p>Not expecting this? Report this error in the <a href="https://github.com/natanlao/yaas/issues">issue tracker</a>.</p>
 {% endblock main %}
 
