--- a/templates/_base.html
+++ b/templates/_base.html
@@ -49,7 +49,7 @@
   </header>
 
   <main>
-    <p><a href="https://yaas.natan.la">yaas</a> is a video downloader. It uses <a href="https://github.com/ytdl-org/youtube-dl">youtube-dl</a> behind the scenes.</p>
+    <p><a href="{{ url_for('index') }}">yaas</a> is a video downloader. It uses <a href="https://github.com/ytdl-org/youtube-dl">youtube-dl</a> behind the scenes.</p>
 
     <form action="{{ url_for('fetch_redirect') }}" method="POST"> <!-- TODO: is this necessary? -->
       <fieldset>
