Add meta description

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+  <meta name="description" content="A video downloader powered by youtube-dl.">
   <title>yaas: youtube-dl as a service</title>
   <link rel="stylesheet" href="https://natan.la/css/default.css">
   <style>
