Fix stylesheet location
I should probably actually vendor this but too lazy

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="A video downloader powered by youtube-dl.">
   <title>yaas: youtube-dl as a service</title>
-  <link rel="stylesheet" href="https://natan.la/css/default.css">
+  <link rel="stylesheet" href="https://natan.la/default.css">
   <style>
     /* purecss.io */
     fieldset {
